name:                booky
version:             0.0.1.0
synopsis:            Block puzzle with solver 
description:
  
license:             MIT
license-file:        LICENSE
copyright:           2020 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Game
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/NCrashed/booky

library
  hs-source-dirs:      src
  exposed-modules:
    Game.Booky
  build-depends:
      base            >= 4.5    && < 4.14
    , brick           >= 0.52   && < 0.53
    , linear          >= 1.20   && < 1.21
    , primitive       >= 0.5    && < 0.8
    , vector          >= 0.10   && < 0.13
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleInstances
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections

executable booky
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-A64m -with-rtsopts=-AL256m -with-rtsopts=-qn4
  build-depends:
      base
    , booky
  default-language:    Haskell2010
